@wvr/ui upgrade to webpack (WIP)
329 failing karma tests